# gpu_blas

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac
include/: cublas.hpp  libgpublas.h  libgpublas_cuda.h  libgpublas_hip.h  rocblas.hpp
src/: cublas.cpp  cublas.cu  gpublas.cpp  rocblas.cpp
test/: a.out  test.c  test.cpp
test/.deps/: test.Tpo
